[package]
name = "konk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
shell-words = "1.1.0"
signal-hook = "0.3.17"
